--- a/loja.html
+++ b/loja.html
@@ -78,7 +78,7 @@
         <p>Papel Higiênico - R$10,99</p>
     </div>
     <div class="produto">
-        <img src="PET.jfif" alt="pET PEDRA">
+        <img src="pet.jfif" alt="pET PEDRA">
         <p>Pet Pedra - R$5000,00</p>
     </div>
 
