--- a/loja.html
+++ b/loja.html
@@ -78,11 +78,37 @@
         <p>Papel Higiênico - R$10,99</p>
     </div>
     <div class="produto">
-        <img src="pet.jfif" alt="pET PEDRA">
-        <p>Pet Pedra - R$5000,00</p>
+        <img src="pet.jfif" alt="PEDRA pET">
+        <p>Pedra Pet - R$5000,00</p>
+    </div>
+
+    <!-- !!!NOVO!!! -->
+
+    <div class="produto">
+        <img src="unity.jpg" alt="Desenvolvendo jogos Unity Livro">
+        <p>Desenvolvendo jogos Unity Livro - R$50,00</p>
+    </div>
+    <div class="produto">
+        <img src="pedra OT.jpg" alt="Pedra Olho de Tigre">
+        <p>Pedra Natural Olho de Tigre - R$10,00</p>
+    </div>
+    <div class="produto">
+        <img src="vela palito.webp" alt="vela palito">
+        <p>Vela Palito - R$12,50</p>
+    </div>
+    <div class="produto">
+            <img src="tetopears.jfif" alt="!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!TETOPEAR!">
+        <p>200 PÊRAS TETO SABOROSAS!!! - R$79,99</p>
+    </div>
+    <div class="produto">
+        <img src="incensos.jpeg" alt="incensos">
+        <p>7 Incensos Perfumados!!! - R$1,99</p>
+    </div>
+    <div class="produto">
+        <img src="xicaras.jpg" alt="xicaras">
+        <p>Conjunto de xícaras top - R$15,30</p>
     </div>
 
 </div>
-
 </body>
 </html>
