--- a/loja.html
+++ b/loja.html
@@ -81,9 +81,6 @@
         <img src="pet.jfif" alt="PEDRA pET">
         <p>Pedra Pet - R$5000,00</p>
     </div>
-
-    <!-- !!!NOVO!!! -->
-
     <div class="produto">
         <img src="unity.jpg" alt="Desenvolvendo jogos Unity Livro">
         <p>Desenvolvendo jogos Unity Livro - R$50,00</p>
@@ -109,6 +106,18 @@
         <p>Conjunto de xícaras top - R$15,30</p>
     </div>
 
+    <!-- !!!NOVO!!! -->
+
+    <div class="produto">
+        <img src="urururur.jpg" alt="FRREDOLA">
+        <p>URURURUR - R$60,00</p>
+    </div>
+
+
+
 </div>
+
+
+
 </body>
 </html>
