--- a/loja.html
+++ b/loja.html
@@ -53,6 +53,7 @@
 <h1>!!BEM VINDO A NOSSA LOJA DE TUDO!!</h1>
 
 <div class="produtos">
+
     <div class="produto">
         <img src="Captura de tela 2025-09-02 144601.png" alt="PNEU DE QUALIDADE">
         <p>PNEU DE QUALIDADE - R$59,00</p>
@@ -105,19 +106,32 @@
         <img src="xicaras.jpg" alt="xicaras">
         <p>Conjunto de xícaras top - R$15,30</p>
     </div>
-
-    <!-- !!!NOVO!!! -->
-
     <div class="produto">
         <img src="urururur.jpg" alt="FRREDOLA">
         <p>URURURUR - R$60,00</p>
     </div>
 
+    <div class="produto">
+        <img src="fonemacho.webp" alt="FRREDOLA">
+        <p>Fone pra macho - R$80,90</p>
+    </div>
+    <div class="produto">
+        <img src="caleidoscopio.webp" alt="caleidoscopio">
+        <p>Caleidoscopio - R$16,47</p>
+    </div>
+    <div class="produto">
+        <img src="escafandro.webp" alt="escafandro">
+        <p>Escafandro - R$7000,99</p>
+    </div>
 
+    <!-- !!!NOVO!!! -->
+
+    <div class="produto">
+        <img src="KKKKKKKKKKKKKK.jpg" alt="FOXY PEZUDO">
+        <p>Fotografia de Foxy - R$106,99</p>
+    </div>
 
 </div>
-
-
 
 </body>
 </html>
